--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </ul>
             </div>
         </section>
-        <section id="brands">
+        <aside id="brands">
             <div class="site-brands">
                 <div class="container">
                     <ul class="row middle between">
@@ -195,7 +195,7 @@
                     </ul>
                 </div>
             </div>
-        </section>
+        </aside>
         <section id="blog">
             <div class="blog-div row middle between">
                 <img class="blog-img" src="./images/massage.svg" alt="massage" width="250" height="250">
