--- a/index.html
+++ b/index.html
@@ -80,12 +80,16 @@
                                 <div class="item-blc center">
                                     <h3 class="item-title design">Design</h3>
                                     <p class="item-text">a plan or drawing produced to show the look and function</p>
+                                    <a class="brand-link text-none" href="#">Learn more <img src="./images/Vectors.svg"
+                                        alt="vector" width="7" height="13"></a>
                                 </div>
                             </li>
                             <li class="serv-item col-3 list-sty">
                                 <div class="item-blc center">
                                     <h3 class="item-title dev">Development</h3>
                                     <p class="item-text">Development is defined as the process of growth or new </p>
+                                    <a class="brand-link text-none" href="#">Learn more <img src="./images/Vectors.svg"
+                                        alt="vector" width="7" height="13"></a>
                                 </div>
                             </li>
                             <li class="serv-item col-3 list-sty">
@@ -101,6 +105,8 @@
                                 <div class="item-blc center">
                                     <h3 class="item-title ils">Illustration</h3>
                                     <p class="item-text">An illustration is a decoration, interpretation or visual</p>
+                                    <a class="brand-link text-none" href="#">Learn more <img src="./images/Vectors.svg"
+                                        alt="vector" width="7" height="13"></a>
                                 </div>
                             </li>
                         </ul>
