--- a/index.html
+++ b/index.html
@@ -203,27 +203,29 @@
             </div>
         </aside>
         <section id="blog">
-            <div class="blog-div row middle between">
-                <img class="blog-img" src="./images/massage.svg" alt="massage" width="250" height="250">
-                <div class="in-blog">
-                    <h2 class="blog-title">Subscribe To Our Blog</h2>
-                    <p class="blog-text">A newsletter is a tool used to communicate regularly with
-                        your subscribers, delivering the information</p>
+            <div class="container">
+                <div class="blog-div row middle between">
+                    <img class="blog-img" src="./images/massage.svg" alt="massage" width="250" height="250">
+                    <div class="in-blog">
+                        <h2 class="blog-title">Subscribe To Our Blog</h2>
+                        <p class="blog-text">A newsletter is a tool used to communicate regularly with
+                            your subscribers, delivering the information</p>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <form class="form-email row middle between"> 
-                    <div class="input">
-                        <i class='bx bx-mail-send'></i>
-                        <input type="email" id="email" placeholder="Type Your Email Address" required>
-                    </div> 
-                    <button class="form-btn" type="submit">Send now 
-                        <span class="hero-br"></span>
-                        <img
-                        class="hero-right" src="./images/strelka.svg" alt="dash" width="29"
-                        height="13">
-                    </button>
-                </form>
+                <div class="form-group">
+                    <form class="form-email row middle between"> 
+                        <div class="input">
+                            <i class='bx bx-mail-send'></i>
+                            <input type="email" id="email" placeholder="Type Your Email Address" required>
+                        </div> 
+                        <button class="form-btn" type="submit">Send now 
+                            <span class="hero-br"></span>
+                            <img
+                            class="hero-right" src="./images/strelka.svg" alt="dash" width="29"
+                            height="13">
+                        </button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
